[package]
name = "btcfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rayon = "1.8"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
serial_test = "3.0"

[[bench]]
name = "address_generation"
harness = false

[lib]
name = "bitcoin_matcher"
path = "src/lib.rs"

[[bin]]
name = "bitcoin-matcher"
path = "src/main.rs"